# xmonad-test

./: .gitignore  README.md  build  build.sh  cabal.project  hie.yaml  install  profile.cfg  profile.yaml  run.sh  xmonad-test.cabal  xmonad-test.service
app/: Main.hs
